; ModuleID = '/home/carl/AnghaBench/nanomsg/src/core/extr_sock.c_nn_sock_add.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/core/extr_sock.c_nn_sock_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_sock = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 (%struct.TYPE_4__*, %struct.nn_pipe*)* }
%struct.nn_pipe = type { i32 }

@NN_STAT_CURRENT_CONNECTIONS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nn_sock_add(%struct.nn_sock* %0, %struct.nn_pipe* %1) #0 {
  %3 = alloca %struct.nn_sock*, align 8
  %4 = alloca %struct.nn_pipe*, align 8
  %5 = alloca i32, align 4
  store %struct.nn_sock* %0, %struct.nn_sock** %3, align 8
  store %struct.nn_pipe* %1, %struct.nn_pipe** %4, align 8
  %6 = load %struct.nn_sock*, %struct.nn_sock** %3, align 8
  %7 = getelementptr inbounds %struct.nn_sock, %struct.nn_sock* %6, i32 0, i32 0
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i32 (%struct.TYPE_4__*, %struct.nn_pipe*)*, i32 (%struct.TYPE_4__*, %struct.nn_pipe*)** %11, align 8
  %13 = load %struct.nn_sock*, %struct.nn_sock** %3, align 8
  %14 = getelementptr inbounds %struct.nn_sock, %struct.nn_sock* %13, i32 0, i32 0
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %14, align 8
  %16 = load %struct.nn_pipe*, %struct.nn_pipe** %4, align 8
  %17 = call i32 %12(%struct.TYPE_4__* %15, %struct.nn_pipe* %16)
  store i32 %17, i32* %5, align 4
  %18 = load i32, i32* %5, align 4
  %19 = icmp sge i32 %18, 0
  %20 = zext i1 %19 to i32
  %21 = call i64 @nn_slow(i32 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %27

23:                                               ; preds = %2
  %24 = load %struct.nn_sock*, %struct.nn_sock** %3, align 8
  %25 = load i32, i32* @NN_STAT_CURRENT_CONNECTIONS, align 4
  %26 = call i32 @nn_sock_stat_increment(%struct.nn_sock* %24, i32 %25, i32 1)
  br label %27

27:                                               ; preds = %23, %2
  %28 = load i32, i32* %5, align 4
  ret i32 %28
}

declare dso_local i64 @nn_slow(i32) #1

declare dso_local i32 @nn_sock_stat_increment(%struct.nn_sock*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
